--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
@@ -27,15 +27,26 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.18.2",
+    "langchain": "^0.1.37",
     "lucide-react": "^0.461.0",
+    "openai": "^4.96.0",
+    "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-flow-renderer": "^10.3.17",
+    "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-simple-image-viewer": "^1.2.2",
+    "react-vertical-timeline-component": "^3.5.3",
+    "reactflow": "^11.11.4",
+    "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
