--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "langchain": "^0.1.37",
     "lucide-react": "^0.461.0",
     "openai": "^4.96.0",
@@ -40,6 +42,7 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-simple-image-viewer": "^1.2.2",
